Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11540

Unexpected system threads in the process list

    XMLWordPrintable

Details

    Description

      On bb-10.2-vcols, starting from 9a4d2284f8019bb84e68bc81e071df9c176dc607:

      +----+-------------+-----------------+------+---------+------+------------------+------------------+----------+
      | Id | User        | Host            | db   | Command | Time | State            | Info             | Progress |
      +----+-------------+-----------------+------+---------+------+------------------+------------------+----------+
      |  1 | system user | connecting host | NULL | Daemon  | NULL | Reading from net | NULL             |    0.000 |
      |  5 | system user | connecting host | NULL | Daemon  | NULL | Reading from net | NULL             |    0.000 |
      |  2 | system user | connecting host | NULL | Daemon  | NULL | Reading from net | NULL             |    0.000 |
      |  4 | system user | connecting host | NULL | Daemon  | NULL | Reading from net | NULL             |    0.000 |
      |  3 | system user | connecting host | NULL | Daemon  | NULL | Reading from net | NULL             |    0.000 |
      |  8 | root        | localhost:43643 | NULL | Query   |    0 | init             | show processlist |    0.000 |
      +----+-------------+-----------------+------+---------+------+------------------+------------------+----------+
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: